# CogniaLauncher

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh.md  app-lib-imports.txt  debug-main.manifest  eslint.config.mjs  jest.config.ts  jest.dashboard.config.ts  jest.docs.config.ts  jest.environments.config.ts  jest.git.config.ts  jest.settings.config.ts  jest.setup.ts  jest.shared.mts  jest.wsl.config.ts  mkdocs.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  test-results.json  tsconfig.json
plugin-sdk/: Cargo.toml
plugin-sdk/examples/hello-world/: Cargo.toml  README.md  plugin.toml
plugin-sdk/src/: batch.rs  cache.rs  clipboard.rs  config.rs  download.rs  env.rs  event.rs  fs.rs  git.rs  health.rs  host.rs  http.rs  i18n.rs  launch.rs  lib.rs  log.rs  notification.rs  pkg.rs  platform.rs  process.rs  profiles.rs  shell.rs  types.rs  ui.rs  wsl.rs
plugins/rust/jwt-inspector/: Cargo.toml  README.md  plugin.toml  plugin.wasm
src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json  test-common-controls.manifest
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  error.rs  lib.rs  main.rs  secrets.rs  tray.rs
src-tauri/src/cache/: db.rs  download.rs  download_history.rs  download_resumer.rs  enhanced.rs  external.rs  history.rs  metadata.rs  migration.rs  mod.rs  sqlite_db.rs
src-tauri/src/commands/: backup.rs  batch.rs  brew.rs  cache.rs  conda.rs  config.rs  custom_detection.rs  diagnostic.rs  download.rs  environment.rs  envvar.rs  feedback.rs  fs_utils.rs  git.rs  github.rs  gitlab.rs  health_check.rs  launch.rs  log.rs  macports.rs  manifest.rs  mod.rs  package.rs  pipx.rs  plugin.rs  poetry.rs  profiles.rs  search.rs  secrets.rs  shim.rs  terminal.rs  toolbox.rs  updater.rs  uv.rs  window_effect.rs  window_effect_support.rs  winget.rs  wsl.rs  xmake.rs
src-tauri/src/config/: lockfile.rs  manifest.rs  mod.rs  settings.rs
src-tauri/src/core/: backup.rs  batch.rs  custom_detection.rs  environment.rs  eol.rs  health_check.rs  history.rs  installer.rs  mod.rs  orchestrator.rs  profiles.rs  project_env_detect.rs  shim.rs  system_info.rs  terminal.rs  validation.rs
src-tauri/src/download/: asset_picker.rs  manager.rs  mod.rs  persistence.rs  queue.rs  state.rs  task.rs  throttle.rs
src-tauri/src/platform/: disk.rs  env.rs  fs.rs  mod.rs  network.rs  paths.rs  process.rs  proxy.rs
src-tauri/src/plugin/: contract.rs  extension_points.rs  host_functions.rs  loader.rs  manager.rs  manifest.rs  mod.rs  permissions.rs  registry.rs  scaffold.rs
src-tauri/src/provider/: adoptium.rs  api.rs  apk.rs  apt.rs  asdf.rs  brew.rs  bun.rs  bundler.rs  cargo.rs  chocolatey.rs  composer.rs  conan.rs  conda.rs  cpp_compiler.rs  deno.rs  dnf.rs  docker.rs  dotnet.rs  flatpak.rs  fnm.rs  fvm.rs  gem.rs  git.rs  github.rs  gitlab.rs  goenv.rs  luarocks.rs  macports.rs  mise.rs  mod.rs  msvc.rs  msys2.rs  nix.rs  node_base.rs  npm.rs  nvm.rs  pacman.rs  phpbrew.rs  pip.rs  pipx.rs  (+24 more)
src-tauri/src/resolver/: mod.rs  (+3 more)
(+1879 files in other folders)
