[workspace]
members = ["examples/hello-world"]

[package]
name = "cognia-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building CogniaLauncher WASM plugins"
license = "MIT"
repository = "https://github.com/AstroAir/CogniaLauncher"

[lib]
crate-type = ["lib"]

[dependencies]
extism-pdk = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
