[package]
name = "cognia-launcher"
version = "0.1.0"
description = "CogniaLauncher - Unified Environment and Package Manager"
authors = ["Max Qian"]
license = "MIT"
repository = "https://github.com/AstroAir/CogniaLauncher"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2.8"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Version parsing
semver = { version = "1.0", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Crypto/checksums
sha2 = "0.10"
hex = "0.4"

# Cross-platform paths
directories = "6.0"
dirs = "6.0"

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3.20"
walkdir = "2.5"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
regex = "1.11"
which = "7.0"
once_cell = "1.19"
urlencoding = "2.1"

# Trash support (cross-platform recycle bin)
trash = "3"

# System information
sysinfo = "0.33"

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
