[package]
name = "builtin_jwt_inspector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
cognia-plugin-sdk = { path = "../../../plugin-sdk" }
extism-pdk = "1.3"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
